--- a/content/book/1/1.2.md
+++ b/content/book/1/1.2.md
@@ -1,7 +1,7 @@
 ---
 title: '1.2. Внутреннее представление программы'
-metaTitle: 'Syntax Highlighting is the meta title tag for this page'
-metaDescription: 'This is the meta description for this page'
+metaTitle: '1.2. Внутреннее представление программы'
+metaDescription: '1.2. Внутреннее представление программы'
 ---
 
 Для понимания и осознанного использования многих особенностей языка программирования полезны знания о внутреннем представлении программы и принципах ее исполнения. Преобразование текста программы и нечто «удобоваримое» с точки зрения компьютера включает в себя два процесса:
