--- a/content/book/1/1.3.md
+++ b/content/book/1/1.3.md
@@ -243,22 +243,23 @@ $2^{10} = 1024 ≈ 1000 = 10^3$
 
 Старший разряд в таком представлении также играет роль знакового. Для отрицательных чисел он равен 1. Рассмотрим, как выглядит представление граничных значений диапазона в шестнадцатеричной системе:
 
-| 00000000 | 0 |
+|          |   |
 |----------|---|
+| 00000000 | 0 |
 | 00000001 | 1 |
 | 00000002 | 2 |
-| …| |
+| …        |   |
 | 0000003F | 63 |
-| …| |
+| …        |    |
 | 7FFFFFFF | $2^{n-1}-1$ |
 | 80000000 | -0 (минус 0) |
 | 80000001 | $-(2^{n-1}-1)$ |
 | 80000002 | $-(2^{n-1}-2)$ |
-| …| |
+| …        |      |
 | FFFFFFF0 | - 16 |
 | FFFFFFF1 | - 15 |
-| …| |
-| FFFFFFFF | -1 |
+| …        |      |
+| FFFFFFFF | -1   |
 
 Особенным является значение **80000000**. Оно называется «минус 0», поскольку является дополнительным кодом самого себя (как и обычный 0). Оно используется для специальных целей, например, для обозначения неинициализированных переменных или недопустимых результатов.
 
@@ -356,29 +357,30 @@ $2^{10} = 1024 ≈ 1000 = 10^3$
 
 - **unsigned** - беззнаковая форма представления целого.
 
-Из этих служебных слов можно составить определение типа данных целой переменной. При этом **signed** считается заданным по умолчанию,
-а **unsigned int** сокращается до **int**:
+Из этих служебных слов можно составить определение типа данных целой переменной. При этом **signed** считается заданным по умолчанию, а **unsigned int** сокращается до **int**:
 
-int i; // целое со знаком, слово <br/>
-char c; // целое со знаком, байт <br/>
-unsigned char uc; // целое без знака, байт <br/>
-unsigned u; // целое без знака, слово <br/>
-long l; // целое со знаком, двойное слово <br/>
-unsigned long ul; // целое без знака, двойное слово <br/>
-short s; // целое со знаком, короткое слово <br/>
-         // (слово или байт) <br/>
+```c
+int i;            // целое со знаком, слово 
+char c;           // целое со знаком, байт 
+unsigned char uc; // целое без знака, байт 
+unsigned u;       // целое без знака, слово 
+long l;           // целое со знаком, двойное слово 
+unsigned long ul; // целое без знака, двойное слово 
+short s;          // целое со знаком, короткое слово 
+                  // (слово или байт) 
+```
 
 Для определения размерности различных переменных и типов в Си имеется специальная операция, которая возвращает размерность типа данных, переменной и значения выражения, подсчитанную в байтах:
 
 ```c
 sizeof (int)  // размерность типа данных int - 4
 sizeof l      // размерность переменной типа long - 4
-sizeof(i+2.0) // размерность значения выражения типа double - 8
+sizeof (i+2.0)// размерность значения выражения типа double - 8
 ```
 
 По умолчанию константы считаются десятичными целыми со знаком. Восьмеричные константы начинаются с 0. Шестнадцатеричные константы имеют префикс 0x. Для длинных целых и беззнаковых целых используются модификаторы констант – L(l) и U(u).
 
-В заключение еще раз вернемся к знаковой и беззнаковой форме представления и к взаимоотношениям между ними и транслятором. Для транслятора обе они - суть машинные слова одинаковой или разной длины. Поэтому когда речь идет о записи (присваивании) значения беззнаковой переменной в переменную со знаком (или наоборот), транслятор просто рассматривает это как копирование машинных слов без каких-либо преобразований. Например, знаковое -1 превращается в беззнаковое 0xFFFFFFFF. Поэтому когда в программе меняется форма представления целого со знаком в беззнаковую (и наоборот), то это не сопровождается абсолютно никакими действиями (машинными командами).
+В заключение еще раз вернемся к знаковой и беззнаковой форме представления и к взаимоотношениям между ними и транслятором. Для транслятора обе они - суть машинные слова одинаковой или разной длины. Поэтому когда речь идет о записи (присваивании) значения беззнаковой переменной в переменную со знаком (или наоборот), транслятор просто рассматривает это как копирование машинных слов без каких-либо преобразований. Например, знаковое **-1** превращается в беззнаковое **0xFFFFFFFF**. Поэтому когда в программе меняется форма представления целого со знаком в беззнаковую (и наоборот), то это не сопровождается абсолютно никакими действиями (машинными командами).
 
 Одной из форм представления целого является также перечислимый тип enum. Переменная такого типа принимает ряд значений, которые перечислены в отдельном определении типа enum в виде идентификаторов (имен). Каждому идентификатору соответствует явно заданное или неявно полученное при перечислении значение:
 
@@ -401,7 +403,7 @@ digit D; ... D = ten; ...
 
 0.4 .665 3.1415926 1.17e2 -176E-3 1.1F5 3.33L 15L
 
-Массив как производный тип данных
+## Массив как производный тип данных
 
 > Массив - последовательность переменных одного и того же типа, имеющая общее имя.
 
@@ -410,10 +412,12 @@ digit D; ... D = ten; ...
 не может быть изменено в процессе выполнения программы. 
 Элементы массива размещаются в памяти последовательно и нумеруются от **0** до **n-1**, где **n** - их количество в массиве. Пример определения массива :
 
-int а[20] = {1,5,4,7}; где <br/>
-int - тип данных элементов массива <br/>
-a - имя массива <br/>
-20 - количество элементов массива <br/>
-1,5,4,7 - инициализация (начальные значения первых 4 элементов, остальные 0) <br/>
+```c
+int а[20] = {1,5,4,7}; // где 
+// int - тип данных элементов массива
+// a - имя массива 
+// 20 - количество элементов массива 
+// 1,5,4,7 - инициализация (начальные значения первых 4 элементов, остальные 0)
+```
 
 Важная особенность массивов в Си: во время работы программы контроль за нахождением индексов в пределах размерности массива не производится. В случае выхода за пределы массива будут использованы значения переменных в соседних областях памяти и результат работы программы будет непредсказуем.
