--- a/content/book/1/1.4.md
+++ b/content/book/1/1.4.md
@@ -99,7 +99,7 @@ c = A[i++]; // Эквивалентно c = A[i]; i = i + 1;
 Уменьшение разрядности машинного слова всегда происходит путем отсечения старших разрядов числа. Заметим, что это может привести к ошибкам потери значащих цифр и разрядов:
 
 ```c
-int n=1045; // Во внутреннем представлении n=0x00000415 (1024+16+5)
+int n = 1045; // Во внутреннем представлении n=0x00000415 (1024+16+5)
 
 char c; c = n; // Потеря значащих цифр (0x15)
 ```
@@ -115,15 +115,15 @@ char c; c = n; // Потеря значащих цифр (0x15)
 ```c
 int n; unsigned u;
 
-char c=0x84; n = c; // Значение n=0xFFFFFF84
+char c = 0x84; n = c; // Значение n=0xFFFFFF84
 
-unsigned char uc=0x84; u = uc; // Значение u=0x00000084
+unsigned char uc = 0x84; u = uc; // Значение u=0x00000084
 ```
 
 При преобразовании вещественного к целому происходит потеря дробной части, при этом возможны случаи возникновения ошибок переполнения и потери значащих цифр, когда полученное целое имеет слишком большое значение:
 
 ```c
-double d1=855.666, d2=0.5E16;
+double d1 = 855.666, d2 = 0.5E16;
 int n; n = d1; // Отбрасывание дробной части 
        n = d2; // Потеря значимости 
 ```
@@ -131,35 +131,35 @@ int n; n = d1; // Отбрасывание дробной части
 Преобразование знаковой формы к беззнаковой не сопровождается изменением значения целого числа и вообще не приводит к выполнению каких-либо действий в программе. В таких случаях транслятор «запоминает», что форма представления целого изменилась:
 
 ```c
-int n=-1; unsigned d; 
+int n =- 1; unsigned d; 
 d = n; // Значение d=0xFFFFFFFF (-1) 
 ```
 
 При выполнении бинарных операций принят следующий порядок:
 
-- короткие типы char, short и битовые поля удлиняются до int, float до double;
+- короткие типы char, short и битовые поля удлиняются до **int**, **float** до **double**;
 
-- если один из операндов – длинный вещественный (long double), то второй также приводится к этому типу;
+- если один из операндов – длинный вещественный (**long double**), то второй также приводится к этому типу;
 
-- если один из операндов – длинное целое (long), то второй также приводится к этому типу;
+- если один из операндов – длинное целое (**long**), то второй также приводится к этому типу;
 
-- если один из операндов – беззнаковый (unsigned), то второй также приводится к этому типу;
+- если один из операндов – беззнаковый (**unsigned**), то второй также приводится к этому типу;
 
 - в конце концов остаются целые операнды, сохраняющие свой тип.
 
-Таким образом, короткие типы данных (знаковые и беззнаковые) удлиняются до int и double, а выполнение любой бинарной операции с одним long double, double, long, unsigned ведет к преобразованию другого операнда к тому же типу. Это может сопровождаться перечисленными выше действиями: увеличение разрядности операнда путем его «удлинения», преобразование в форму с плавающей точкой и изменение беззнаковой формы представления на знаковую и наоборот.
+Таким образом, короткие типы данных (знаковые и беззнаковые) удлиняются до **int** и **double**, а выполнение любой бинарной операции с одним **long double**, **double**, **long**, **unsigned** ведет к преобразованию другого операнда к тому же типу. Это может сопровождаться перечисленными выше действиями: увеличение разрядности операнда путем его «удлинения», преобразование в форму с плавающей точкой и изменение беззнаковой формы представления на знаковую и наоборот.
 
-Следует обратить внимание на одну тонкость: если в процессе преобразования требуется увеличение разрядности переменной, то на способ ее «удлинения» влияет только наличие или отсутствие знака у самой переменной. Второй операнд, к типу которого осуществляется приведение, на этот процесс не влияет (принятые в примерах размерности short – 16 разрядов, int – 32 разряда):
+Следует обратить внимание на одну тонкость: если в процессе преобразования требуется увеличение разрядности переменной, то на способ ее «удлинения» влияет только наличие или отсутствие знака у самой переменной. Второй операнд, к типу которого осуществляется приведение, на этот процесс не влияет (принятые в примерах размерности short – 16 разрядов, **int** – 32 разряда):
 
 ```c
-int l= 0x0031;
+int l = 0x0031;
 
 unsigned short d = 0xFF000;
 
 l + d ... // 0x00000031 + 0xFF00 = 0x00000031 + 0x0000FF00 = 0x0000FF31
 ```
 
-В данном случае производится преобразование укороченного целого без знака (unsigned) к целому со знаком (int). В процессе преобразования «удлинение» переменной d производится как беззнаковое (разряды заполняются нулями), хотя второй операнд и имеет знак. Рассмотрим еще несколько примеров.
+В данном случае производится преобразование укороченного целого без знака (**unsigned**) к целому со знаком (**int**). В процессе преобразования «удлинение» переменной d производится как беззнаковое (разряды заполняются нулями), хотя второй операнд и имеет знак. Рассмотрим еще несколько примеров.
 
 ```c
 int i; i = 0xFFFFFFFF;
@@ -172,7 +172,7 @@ short i = 0xFFFF;
 int l; l = i;
 ```
 
-Преобразование short в int сопровождается «удлинением» переменной, что с учетом представления i со знаком дает FFFFFFFF, то есть целое со значением -1.
+Преобразование short в **int** сопровождается «удлинением» переменной, что с учетом представления i со знаком дает FFFFFFFF, то есть целое со значением -1.
 
 ```c
 unsigned short n = 0xFF00;
@@ -193,7 +193,7 @@ if (u > 5) ... //  «Истина»
 И последнее, очень важное свойство: преобразование выполняется для каждой пары операндов независимо, т.е. абсолютно не важно, какие типы операндов имеют место в последующих операциях. «Забывчивость» в этом вопросе приводит к ошибкам:
 
 ```c
-int a=5, b=2; double dd; dd=a/b; // результат dd=2.0, деление int/int
+int a = 5, b = 2; double dd; dd = a / b; // результат dd=2.0, деление int/int
 ```
 
 Здесь производится целочисленное деление, несмотря на запоминание результата в вещественной форме.
@@ -255,7 +255,7 @@ a = (b > c)\* 2; // Принимает значения 0 или 2
 ```c
 if (a < b && b < c) // если ОДНОВРЕМЕННО ОБА a < b и b < c, то...
 
-if (a==0 || b > 0) // если ХОТЯ БЫ ОДИН a==0 или b > 0, то...
+if (a == 0 || b > 0) // если ХОТЯ БЫ ОДИН a==0 или b > 0, то...
 ```
 
 Логические операции И и ИЛИ имеют в Си еще одно свойство. Если в операции И первый операнд имеет значение «ложь», а в операции ИЛИ – «истина», то вычисление выражения прекращается, потому что значение его уже становится известным («ложь» -для И, «истина» -для ИЛИ). Поэтому возможны выражения, где в первом операнде операции И проверяется корректность некоторой переменной, а во втором - она же используется с учетом этой корректности:
@@ -406,19 +406,19 @@ c = (long)a \* b; // Правильно
 Операция присваивания, операция «запятая» и условная операция позволяют выполнять многие действия «на лету», не выходя за пределы синтaксиса выражения в условиях, проверяемых в оперaторах if, while, например:
 
 ```c
-while ((c=getchar()) !='\*') {...c...}
+while ((c = getchar()) !='\*') {...c...}
 ```
 
 Здесь в переменной c запоминается результат функции, вызванной во время проверки условия в операторе while, с целью дальнейшего его использования в теле оператора.
 
 ```c
-while (x0=x1, x0 > 0) {... x1 =f(x0) ...}
+while (x0 = x1, x0 > 0) {... x1 =f(x0) ...}
 ```
 
 Присваивание выполняется во время проверки условия в операторе цикла.
 
 ```c
-for (...; d>0 ? a>b : b>=a; ...) {...}
+for (...; d > 0 ? a > b : b >= a; ...) {...}
 ```
 
 В зависимости от значения переменной d меняется условие продолжения цикла for.
