--- a/content/book/1/1.6.md
+++ b/content/book/1/1.6.md
@@ -93,7 +93,7 @@ void main(int narg, char *argv[]) {...}  // с интерфейсом коман
 
 4. в соответствии со списком фактических параметров устанавливается соответствие между элементами контекста вызывающей функции и формальными параметрами;
 
-![](./assets/016-02.png)
+![Рис.16.2. Механизм вызова функции](./assets/016-02.png)
 
 5. формальный параметр – массив **A** передается по ссылке - отображается на фактический параметр, аналогичный массив **B**, определенный в контексте вызывающей функции;
 
@@ -163,34 +163,31 @@ y = sin(x); //------Неявное преобразование (double)x
 Но кроме этого в ее состав включаются еще переменные, доступные сразу нескольким функциям. Такие переменные называются глобальными (в терминологии Си – **внешними**). Будучи определенными в любом месте программы вне тела функции, они становятся доступными любой функции, следующей за ней по тексту программы:
 
 ```c
-int         B[10];                  // B
+int B[10];       // B
 
-int  sum()                      // B
+int sum()        // B
+{ ...B[i]... }   // B
 
-            { ...B[i]... }               // B
+int n;           // B,n
 
-int n;                         // B,n
+void nf()        // B,n
+{...B[i]...n...} // B,n
 
-void nf()                       // B,n
+char c[80];      // B,n,c
 
-{...B[i]...n...}              // B,n
-
-char c[80];                     // B,n,c
-
-void main()                     // B,n,c
-
-{...B[i]...n...c[k]...}          // B,n,c
+void main()             // B,n,c
+{...B[i]...n...c[k]...} // B,n,c
 ```
 
 Глобальные (внешние) переменные являются «стабильными» данными в программе. Транслятор переводит их во внутреннее представление, в котором им соответствуют определенные адреса памяти в сегменте данных (см.1.2). Можно сказать, что эти переменные находятся в программе (программном файле) еще до загрузки ее в память. Такое присваивание начальных значений переменным при их трансляции называется **инициализацией**. Инициализация включается в синтаксис определения переменной:
 
-`Int a=5, B[10]= {1,5,4,2}, C[]={ 0,1,2,3,4,5 };`
+`Int a = 5, B[10]= {1,5,4,2}, C[]={ 0,1,2,3,4,5 };`
 
 Инициализатор отделяется от переменной в ее определении знаком «=». Для простой переменной - это обычная константа, для массива - список констант, заключенных в фигурные скобки и разделенных запятыми. Заметим, что размерность массива может отсутствовать, если транслятор в состоянии определить ее из инициализирующего списка.
 
 &nbsp;<Icon name="Smile"/> Использование глобальных переменных в программе «не есть хорошо». Во-первых, оно ограничивает возможность работы функции одним и тем же набором параметров, Во-вторых, создает неявные связи через данные между различными функциями. Поэтому предпочтительнее передавать данные между функциями через формальные параметры. Иначе говоря, программисты по своей природе должны быть «антиглобалистами».
 
-##Попытка собрать все в кучу
+## Попытка собрать все в кучу
 
 После такого количества определений и терминов не грех рассмотреть различные варианты организации интерфейса функции и ее вызова.
 
@@ -250,115 +247,81 @@ void main(){
 
 
 ```c
-//-------------------------------------------------
+int max(int A[],int n) {
+  for (int i=1,s=A[0];i<n;i++)
+    if (A[i]>s) s=A[i];
 
-int max(int A[],int n){
+  return s; 
+}
 
-            for (int i=1,s=A[0];i<n;i++)
-
-                        if (A[i]>s) s=A[i];
-
-            return s; }
-
-void main(){
-
-            int m,B[]={3,6,4,5,7};
-
-            m=max(B,5);}
+void main() {
+  int m, B[] = { 3,6,4,5,7 };
+  m = max(B, 5);
+}
 ```
-
 
 **Максимальное значение массива, возвращаемое по ссылке.** Вариант, аналогичный предыдущему, но функция, не имея явного результата, возвращает максимальное значение по ссылке.
 
-
-
 ```c
-//-------------------------------------------------
+void max(int &s,int A[], int n) {
+  int i;
+  for (i=1,s=A[0];i<n;i++)
 
-void max(int &s,int A[], int n){
-
-            int i;
-
-            for (i=1,s=A[0];i<n;i++)
-
-                        if (A[i]>s) s=A[i];
-
+  if (A[i]>s) s=A[i];
 }
 
-void main(){
-
-            int m,B[]={3,6,4,5,7};
-
-            max(m,B,5); }
+void main() {
+  int m, B[]={ 3,6,4,5,7 };
+  max(m, B, 5); }
 ```
-
 
 **Массив как результат функции.** Функция не может возвратить массив в качестве переменной-результата. Для того, чтобы это сделать, необходимо передать «пустой» внешний массив по ссылке, который заполняется в процессе вызова функции.
 
-
-
 ```c
-//-------------------------------------------------
+int pull(int v, int A[], int n) {
+  int i=0,m=2;
+  while(v != 1 && i != n) {
+    if (v%m == 0) { A[i++] = m; v /= m; }
+    else m++;
+  }
 
-int pull(int v,int A[],int n){
+  return i; 
+}
 
-            int i=0,m=2;
-
-            while(v!=1 && i!=n){
-
-                        if (v%m==0) { A[i++]=m; v/=m; }
-
-                        else m++;
-
-                        }
-
-            return i; }
-
-void main(){
-
-            int k,B[10];
-
-            k=pull(1275,B,10); }
+void main() {
+  int k, B[10];
+  k = pull(1275, B, 10); 
+}
 ```
-
 
 **Функция с двумя результатами.** Функция, определяющая в массиве первую последовательность одинаковых значений, возвращает в качестве результата индекс начала и длину такой последовательности. Индекс возвращается в виде явного результата, длина – через формальный параметр – ссылку.
 
-
-
 ```c
-//-------------------------------------------------
+int len(int &k, int A[], int n) {
+  for (int i = 0; i < n; i++) {
+    for (k = 1; i+k < n && A[i] == A[i+k]; k++);
+    if (k>1) return i;
+  }
 
-int len(int &k,int A[],int n){
+  return -1;
+}
 
-            for (int i=0;i<n;i++){
+void main() {
+  int k1, m1, B[10] = { 5,7,6,6,6,6,6,6,5,7 };
 
-                        for (k=1;i+k<n && A[i]==A[i+k];k++);
-
-                        if (k>1) return i;
-
-                        }
-
-            return -1;}
-
-void main(){
-
-            int k1,m1,B[10]={5,7,6,6,6,6,6,6,5,7};
-
-            k1=len(m1,B,10); }
+  k1 = len(m1, B, 10); 
+}
 ```
 
 В заключение отметим ряд типичных ошибок, допускаемых при определении и вызове функции:
 
 - «вилка и розетка» - несоответствие количества и типов формальных и фактических параметров равносильно использованию в электротехнике розеток и вилок с разным числом и размерами контактов.
 
-
-
 ```c
 void F(int a, int b) { … }
 
 void main() {
-  n=5;  // «Две дырки и один штырек»
+  n = 5;  // «Две дырки и один штырек»
   F(n);
 }
 ```
@@ -370,15 +333,16 @@ void F() {
                 // вместо вызова одной функции из другой
 }
 ```
+
 - «Алиса в Зазеркалье» -  каждая функция имеет свой контекст, в вызывающей функции – свой, в вызываемой – свой. Попытки использовать контекст одной функции, находясь в другой, сравнимы с попыткой схватить собственное отражение в зеркале. Связь между контекстами устанавливается только через взаимодействие формальных и фактических параметров;
 
 ```c 
 void F(int n) {
-  int a=5;
+  int a = 5;
 }
 
 void main(){
-  n=5;  // Использование контекста вызываемой функции
+  n = 5;  // Использование контекста вызываемой функции
   F(n);
 }
 ```
@@ -387,13 +351,13 @@ void main(){
 
 ```c 
 void F(int A[], int n) {
-  int a=5;
+  int a = 5;
 }
 
 void main() { 
-  int B[] = {1, 5, 6};
-  F(B[],3); // B должно быть без скобой -
-            // обозначение объекта, который является МАССИВОМ
+  int B[] = { 1, 5, 6 };
+  F(B[], 3); // B должно быть без скобой -
+             // обозначение объекта, который является МАССИВОМ
 }                                   
 ```
 
