--- a/content/book/2/2.1.md
+++ b/content/book/2/2.1.md
@@ -6,8 +6,10 @@ metaDescription: '2.1. Зачем читать чужие программы?'
 
 ### Прежде чем начать (Чего не могут компьютеры?)
 
-«Разруха сидит не в клозетах, а в головах»
+<pre>
+«Разруха сидит не в клозетах, а в головах»<br/>
 М.Булгаков «Собачье сердце».
+</pre>
 
 Тот, кто считает, что процесс программирования заключается во вводе
 в компьютер различных команд и выражений, написанных на языке программирования,
@@ -39,8 +41,7 @@ metaDescription: '2.1. Зачем читать чужие программы?'
 образно-эмоционально и формально-логически. Компьютер содержит в себе вторую крайность - он в состоянии воспроизвести с большой
 скоростью заданный набор формально-логических действий, именуемых иначе
 программой. В принципе, человек может делать то же самое, но в ограниченных
-масштабах. Как было метко сказано: **«Компьютер
-- это идиот, но идиот быстродействующий»**.
+масштабах. Как было метко сказано: **«Компьютер - это идиот, но идиот быстродействующий»**.
 
 Любой набор формальных действий всегда дает определенный результат,
 который уже является внешней стороной процесса. Какой-либо «смысл» для самой
@@ -59,10 +60,12 @@ metaDescription: '2.1. Зачем читать чужие программы?'
 
 ### Чтение – вот лучшее учение
 
-«Не нужно читать много книг»
-Мао Дзе Дун. Речь 13 октября <st1:metricconverter ProductID="1957 г" w:st="on">1957 г</st1:metricconverter>.
-
+<pre>
+«Не нужно читать много книг»<br/>
+Мао Дзе Дун. Речь 13 октября 1957 г.<br/>
 на Верховном государственном совещании
+</pre>
+
 
 Мое глубокое убеждение, изучение программирования нужно начинать с
 чтения чужих программ. Риторический вопрос, зачем. Естественно, не для того,
@@ -88,53 +91,47 @@ metaDescription: '2.1. Зачем читать чужие программы?'
 ко всем структурам данных часть.
 
 ```c
-int         F(int A[],int n){                           // Массив
-
-int i,s;                                      
-
-for (i=0,s=A[0]; i<n; i++)
-
-            if (A[i]<s) s=A[i];
-
-return s; }
+int F(int A[], int n) { // Массив
+  int i,s;                                      
+  for (i = 0, s = A[0]; i < n; i++)
+    if (A[i] < s) s = A[i];
+  
+  return s; 
+}
 ```
  
 ```c
-int         F(int *A[]){                                 // Массив указателей
+int F(int *A[]) { // Массив указателей
+  int i,k;                                      
+  for (i = k = 0; A[i] != NULL; i++)
+    if (*A[i] < *A[k]) k = i;
 
-int i,k;                                      
-
-for (i=k=0; A[i]!=NULL; i++)
-
-            if (*A[i] < *A[k]) k=i;
-
-return *A[k];}
+  return *A[k];
+}
 ```
  
 ```c
-int F(list *ph){
+int F(list *ph) {
+  list *p, *q; // Список
 
-list *p,*q;                                               // Список
+  for (p = q = ph; p != NULL; p = p->next)
+    if (p->val < q->val) p = q;
 
-for (p=q=ph; p!=NULL; p=p->next)
-
-            if (p->val < q->val) p=q;
-
-return q->val); }
+  return q->val); 
+}
 ```
  
 ```c
-int F(xxx *q){                                         // Дерево
+int F(xxx *q) { // Дерево
+  int i, n, m;
 
-int i,n,m;
+  if (q == NULL) return 0;
 
-if (q==NULL) return 0;
+  for (n = q->v, i = 0; i < 4; i++)
+    if ((m = F(q->p[i])) > n) n = m;
 
-for (n=q->v,i=0; i<4; i++)
-
-            if ((m=F(q->p[i])) >n) n=m;
-
-return n;}
+  return n;
+}
 ```
 
 Из сравнения программ видно, что в них имеется сходные конструкции,
@@ -145,8 +142,8 @@ return n;}
 даже не конструкция языка, а некоторая логическая схема:
 
 ```c
-for (s=«первый объект»,«цикл по множеству объектов»)
-  if («очередное» < s) s=«очередное»;
+for (s = «первый объект», «цикл по множеству объектов»)
+  if («очередное» < s) s = «очередное»;
 ```
 
 Эта схема имеет двоякое значение. Во-первых, в каких бы контекстах
