--- a/content/book/1/1.8.md
+++ b/content/book/1/1.8.md
@@ -5,7 +5,9 @@ metaDescription: '1.8. Если все сразу'
 ---
 
 <pre>
-«При трогании с места на ровном участке дороги в безветренную погоду необходимо преодолеть лишь силу сопротивления качению колес и силу инерции».<br/> 
+«При трогании с места на ровном участке дороги в безветренную <br/>
+погоду необходимо преодолеть лишь силу сопротивления качению<br/>
+колес и силу инерции».<br/> 
 <br/>
 С.Сабодахо. За рулем легкового автомобиля.
 </pre>
@@ -16,7 +18,7 @@ metaDescription: '1.8. Если все сразу'
 
 Программа нарочно построена «без единого гвоздя», то есть без единого комментария, поскольку на первый раз их потребуется слишком много и малая их часть проблемы не решит. Попробуем разобрать эту программу сначала «чисто синтаксически», а затем по содержанию выполняемых действий.
 
-Шаг 1. Модульная структура программы. Прежде всего, программа представляет собой набор функций (модулей), вызывающих друг друга. В простейшем случае она состоит из единственной функции main (см. 1.6, 1.7).
+**Шаг 1**. Модульная структура программы. Прежде всего, программа представляет собой набор функций (модулей), вызывающих друг друга. В простейшем случае она состоит из единственной функции main (см. 1.6, 1.7).
 
 1. Программа состоит из двух функций – синтаксически независимых модулей FF и main.
 
@@ -26,7 +28,7 @@ metaDescription: '1.8. Если все сразу'
 
 4. Директива подключения заголовочного файла `#include <stdio.h>` включает в текст программы заголовочный файл описания стандартной библиотеки ввода-вывода. Без него транслятор «не знает» о существовании функций ввода-вывода, не имеет описания их интерфейса и не может сформировать их корректный вызов  (подробнее см. 1.7,5.7).
 
-Шаг 2. Определение переменных. Все переменные, используемые в программе, должны быть определены. При определении переменная получает имя, форму представления (тип данных) и, возможно, начальные значения (см. 1.2, 1.6). Переменные, определенные в теле функции, называются локальными. Они создаются в момент входа в функцию (начало ее выполнения) и уничтожаются при выходе. В каждой функции имеется собственный набор переменных, необходимый для «внутреннего употребления» и невидимый извне. В принципе, возможно использование общих (глобальных) переменных, определенных вне функций, но в данной программе они не используются (см. 1.6).
+**Шаг 2**. Определение переменных. Все переменные, используемые в программе, должны быть определены. При определении переменная получает имя, форму представления (тип данных) и, возможно, начальные значения (см. 1.2, 1.6). Переменные, определенные в теле функции, называются локальными. Они создаются в момент входа в функцию (начало ее выполнения) и уничтожаются при выходе. В каждой функции имеется собственный набор переменных, необходимый для «внутреннего употребления» и невидимый извне. В принципе, возможно использование общих (глобальных) переменных, определенных вне функций, но в данной программе они не используются (см. 1.6).
 
 При определении переменных им могут быть присвоены начальные значения (инициализация):
 
@@ -34,7 +36,7 @@ metaDescription: '1.8. Если все сразу'
 
 2. в функции main определяются и инициализируются массивы. Размерность переменных задается при определении и не может быть изменена при выполнении программы. Для массивов она задается целой константой. Поэтому при работе программа должна следить за количеством заполненных элементов массива. В Си элементы массива нумеруются, начиная с 0, поэтому массив размерности n содержит элементы с номерами от 0 до n-1;
 
-Шаг 3. Операции и выражения. Выражение представляет собой линейную последовательность операций доступа к данным или их преобразования. «Участниками» операций являются переменные и константы, а также результаты предыдущих операций. Большинство операций совместимо между собой по типу результата, поэтому они могут встречаться в различных фантастических сочетаниях. В Си набор операций довольно широк и включает в себя те действия, которые в других языках программирования реализуются операторами:
+**Шаг 3**. Операции и выражения. Выражение представляет собой линейную последовательность операций доступа к данным или их преобразования. «Участниками» операций являются переменные и константы, а также результаты предыдущих операций. Большинство операций совместимо между собой по типу результата, поэтому они могут встречаться в различных фантастических сочетаниях. В Си набор операций довольно широк и включает в себя те действия, которые в других языках программирования реализуются операторами:
 
 1. операция присваивания (=) сохраняет значение вычисленного выражения в переменной (адресном выражении), находящейся в левой части. Присваивание является операцией, она может быть использована многократно и в последовательности других операций. Ее результатом является значение левого операнда (это свойство в данном примере не используется);
 
@@ -54,7 +56,7 @@ metaDescription: '1.8. Если все сразу'
 
 ![](./assets/018-02.png)
 
-Шаг 4. Вызов стандартных функций ввода-вывода. Подробное описание форматированного ввода-вывода приводится в 4.5. Здесь же прокомментируем только то, что встречается в программе:
+**Шаг 4**. Вызов стандартных функций ввода-вывода. Подробное описание форматированного ввода-вывода приводится в 4.5. Здесь же прокомментируем только то, что встречается в программе:
 
 - функции scanf и printf используются для ввода значений целых переменных;
 
@@ -66,7 +68,7 @@ metaDescription: '1.8. Если все сразу'
 
 - в функции ввода в форматной строке символы %d обозначают, что очередное значение вводится в десятичной системе счисления в очередную переменную типа int из списка, перед именем переменной обязателен символ «&».
 
-Шаг 5. Операторы. В данном примере почти операторы являются структурированными, т.е. построены по принципу «один вход — один выход». Их объединение производится либо в виде последовательного расположения в тексте (и выполнения), либо в виде вложенности одного в другой, единственным исключением является return, и то он имеет отношение к процессу вызова функции:
+**Шаг 5**. Операторы. В данном примере почти операторы являются структурированными, т.е. построены по принципу «один вход — один выход». Их объединение производится либо в виде последовательного расположения в тексте (и выполнения), либо в виде вложенности одного в другой, единственным исключением является return, и то он имеет отношение к процессу вызова функции:
 
 1. тело функции FF состоит из определения переменных (в смысле выполняемых действий определение локальных переменных представляет собой процесс их создания и инициализации), а также трех последовательно выполняемых операторов: цикла for(i=1;i<n;i++), условного оператора if(k>s) и оператора возвращения результата return;
 
@@ -88,7 +90,7 @@ metaDescription: '1.8. Если все сразу'
 
 10. тело второго цикла представляет собой простой оператор – выражение с вызовом функции вывода.
 
-Шаг 6. Определение и вызов функций. Программа состоит из двух функций. Функция FF реализует ее содержательную часть, а основная функция main – интерфейсную часть (ввода-вывод):
+**Шаг 6**. Определение и вызов функций. Программа состоит из двух функций. Функция FF реализует ее содержательную часть, а основная функция main – интерфейсную часть (ввода-вывод):
 
 1. заголовок функции FF имеет тип результата int, функция возвращает целое значение в то выражение, откуда она вызывается;
 
@@ -104,7 +106,7 @@ metaDescription: '1.8. Если все сразу'
 
 7. при втором вызове функции FF в нее по ссылке передается массив C, в качестве размерности передается значение константы 10. Результат вывода перенаправляется в функцию вывода printf в качестве фактического (входного) параметра.
 
-Шаг 7. Содержательный смысл программы. Функция FF представляет содержательную часть программы, а main — интерфейсную. Все, что связано с содержательным анализом программы, рассматривается в главе 2. Более того, в 2.5 приводится пример анализа подобного фрагмента. Поэтому здесь мы приведем только результат выполнения функции и смысловую интерпретацию некоторых ее элементов: она находит максимальную последовательность подряд идущих одинаковых элементов и возвращает индекс первого из них.
+**Шаг 7**. Содержательный смысл программы. Функция FF представляет содержательную часть программы, а main — интерфейсную. Все, что связано с содержательным анализом программы, рассматривается в главе 2. Более того, в 2.5 приводится пример анализа подобного фрагмента. Поэтому здесь мы приведем только результат выполнения функции и смысловую интерпретацию некоторых ее элементов: она находит максимальную последовательность подряд идущих одинаковых элементов и возвращает индекс первого из них.
 
 - основной цикл функции FF просматривает массив, последовательно сравнивая пары элементов (индекс текущего элемента i). Если они равны, то увеличивается счетчик k, а если нет, то он сбрасывается. Таким образом, счетчик отслеживает длину цепочки совпадающих пар (точнее, количество таких пар);
 
