--- a/content/book/1/1.8.md
+++ b/content/book/1/1.8.md
@@ -5,11 +5,11 @@ metaDescription: '1.8. Если все сразу'
 ---
 
 <pre>
-«При трогании с места на ровном участке дороги в безветренную <br/>
-погоду необходимо преодолеть лишь силу сопротивления качению<br/>
-колес и силу инерции».<br/> 
+«При трогании с места на ровном участке дороги<br/> 
+в безветренную погоду необходимо преодолеть лишь силу<br/> 
+сопротивления качению колес и силу инерции».<br/> 
 <br/>
-С.Сабодахо. За рулем легкового автомобиля.
+<b>С.Сабодахо. За рулем легкового автомобиля.</b> 
 </pre>
 
 С чего начать практическое программирование на не вполне знакомом языке? Можно со справочника: идентификаторы, константы, служебные слова. Скучно. Можно с примера: написать бесполезную программу из одного оператора, выводящего «Hello, world», а затем долго ее обсуждать. Поступим по-другому. В следующей главе мы будем заниматься анализом и проектированием простых программ. Попробуем представить одну из них в «товарном виде» - в виде готового консольного приложения, и сказать все, или почти все, о ее составных частях.
